--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am an SEO Specialist.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am born and raised in India. I am moved to California a year ago.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I loved to watch movies.!!!</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Full-stack Developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I lived in Orange, CA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>A Career in Web Development is full of new experiences, skills and tools. It is an exciting place to be.</p>
     </section>
 
     <footer id="footer">
