--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <h1>Introduction</h1>
       <p>I am an SEO Specialist.</p>
       <h1>Where I'm From</h1>
-      <p>I am born and raised in India. I am moved to California a year ago.</p>
+      <p>I am born and raised in India. I moved to California a year ago.</p>
       <h1>What are your favorite hobbies?</h1>
       <p>I loved to watch movies.!!!</p>
       <h1>What's your dream job?</h1>
