--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <h1>What's your dream job?</h1>
       <p>Full-stack Developer</p>
       <h1>Where do you live?</h1>
-      <p>I lived in Orange, CA</p>
+      <p>I am living in Orange, CA</p>
       <h1>Why do you want to be a web developer?</h1>
       <p>A Career in Web Development is full of new experiences, skills and tools. It is an exciting place to be.</p>
     </section>
